# backend/src/main/java/io/swagger/api/BugApi.java
@@ -13,7 +13,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 
 import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-06T17:23:51.744Z")
+
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-10T10:14:14.149Z")
 
 @Api(value = "bug", description = "the bug API")
 @RequestMapping(value = "")
@@ -27,7 +28,6 @@ public interface BugApi {
             method = RequestMethod.GET)
     ResponseEntity<List<Bug>> bugGet();
 
-
     @ApiOperation(value = "", nickname = "bugNameGet", notes = "Fetch bug with passed name ```Example: http://192.168.99.101:4041/bug/tarantula```", response = Bug.class, tags = {"Bug",})
     @ApiResponses(value = {
             @ApiResponse(code = 200, message = "Successfully fetched a bug", response = Bug.class),
@@ -36,5 +36,15 @@ public interface BugApi {
             produces = {"application/json", "text/html"},
             method = RequestMethod.GET)
     ResponseEntity<Bug> bugNameGet(@ApiParam(value = "Name of the bug", required = true) @PathVariable("name") String name);
+
+
+    @ApiOperation(value = "", nickname = "bugNameImageGet", notes = "Fetch bug image with passed name ```Example: http://192.168.99.101:4041/bug/tarantula/image```", response = String.class, tags = {"Bug",})
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "Successfully fetched the bug image", response = String.class),
+            @ApiResponse(code = 404, message = "The bug was not found")})
+    @RequestMapping(value = "/bug/{name}/image",
+            produces = {"text/plain", "text/html"},
+            method = RequestMethod.GET)
+    ResponseEntity<String> bugNameImageGet(@ApiParam(value = "Name of the bug", required = true) @PathVariable("name") String name);
 
 }
