# backend/src/main/java/io/swagger/api/FossilApi.java
@@ -13,7 +13,8 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 
 import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-06T17:23:51.744Z")
+
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2020-04-10T10:14:14.149Z")
 
 @Api(value = "fossil", description = "the fossil API")
 @RequestMapping(value = "")
@@ -36,5 +37,15 @@ public interface FossilApi {
             produces = {"application/json", "text/html"},
             method = RequestMethod.GET)
     ResponseEntity<Fossil> fossilNameGet(@ApiParam(value = "Name of the fossil", required = true) @PathVariable("name") String name);
+
+
+    @ApiOperation(value = "", nickname = "fossilNameImageGet", notes = "Fetch fossil image with passed name ```Example: http://192.168.99.101:4041/fossil/trilobite/image```", response = String.class, tags = {"Fossil",})
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "Successfully fetched the fossil image", response = String.class),
+            @ApiResponse(code = 404, message = "The fossil was not found")})
+    @RequestMapping(value = "/fossil/{name}/image",
+            produces = {"text/plain", "text/html"},
+            method = RequestMethod.GET)
+    ResponseEntity<String> fossilNameImageGet(@ApiParam(value = "Name of the fossil", required = true) @PathVariable("name") String name);
 
 }
